fix(css): avoid horizontal scroll

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -646,7 +646,6 @@ body {
   }
 
   .content {
-    width: 100vw;
     color: rgb(255, 255, 255);
 
     .title {
